# django-forums-app

./: .coveragerc  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  Pipfile  Readme.md  build.sh  docker-compose-dev.yml  docker-compose-prod.yml  heroku.yml  manage.py  pyproject.toml  pytest.ini  render.yaml  requirements.in  requirements.old  requirements.txt
.circleci/: config.yml
.github/workflows/: django.yml  main.yml
api/: permissions.py  serializers.py  urls.py  views.py
docs/: migration-plan-py312-django42.md
forums/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
forums/migrations/: 0001_initial.py  0002_thread_text.py  0003_post_upvotes.py  0004_upvote.py  0005_notification.py  0006_auto_20191203_0758.py  0007_auto_20191203_0820.py  0008_userprofile.py  0009_auto_20191207_1835.py  0010_auto_20191207_1914.py  0011_auto_20191209_1624.py  0012_auto_20200112_1130.py  0012_auto_20200129_0929.py  0013_auto_20200324_1029.py  0014_auto_20200324_1234.py
pages/: tests.py  urls.py
project/: __init__.py  celery.py  urls.py  utils.py  views.py  wsgi.py
project/settings/: base.py  development.py  production.py  test.py
static/css/: base.css  darcula.css
staticfiles/css/: base.css  brands.css  fontawesome.css  regular.css  solid.css  svg-with-js.css  v4-shims.css
staticfiles/js/: brands.js  conflict-detection.js  fontawesome.js  regular.js  solid.js  v4-shims.js
staticfiles/less/: _icons.less  (+5 more)
templates/: 403.html  _base.html  home.html
users/: admin.py  forms.py  models.py  tests.py
(+40 files in other folders)
